# particl

./: .gitignore  CMakeLists.txt  README.md
src/: gpusort.cpp  init.cs  main.cpp  shader.fs  shader.vs  simulate.cs  varying.def.sc
